--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Devin Weaver (@sukima) <suki@tritarget.org> (https://tritarget.org/)",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
