Move from Yarn to NPM

--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "parse-duration": "^1.0.0"
+  },
+  "volta": {
+    "node": "18.13.0",
+    "npm": "9.4.0"
   }
 }
